--- a/style.css
+++ b/style.css
@@ -13,3 +13,37 @@ headThing {
 	font-size:24px;
 	font-weight: 700;
 }
+
+sidebarContainer {
+	position: fixed;
+	left: 10px;
+	top: 10px;
+	height: 100%;
+	font-size: 16px;
+}
+
+sidebarA {
+	height: 70%;
+	width: 250px;
+	border: 1px dashed;
+}
+
+sidebarB {
+	height: 20%;
+	left: 10px;
+	width: 250px;
+	border: 1px dashed;
+	
+}
+
+postTitle {
+	font-size:20px;
+	font-weight: 700;
+	text-align: center;	
+}
+
+postContent {
+	font-size: 16px;
+	
+	
+}
