--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ headThing {
 }
 
 .post {
-	position:static;
+	position: relative;
+	top: 50px;
+	left: 270px;
 	border: 1px dashed;
 }
 post:title {
