--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
 	text-align:center;
 }
 
-headThing {
+.headThing {
 	font-size:24px;
 	font-weight: 700;
-	position: relative;
-	left: 260px;
+	width: 100%;
+	height: 35px;
+	border 3px;
 }
 
 #sidebarContainer {
