--- a/style.css
+++ b/style.css
@@ -47,13 +47,21 @@ body {
 	width: 1000px;
 	border: 1px dashed;
 }
-post:T {
+post .T {
 	font-size:20px;
 	font-weight: 700;
 	text-align: center;	
 }
 
-post:content {
+post .content {
 	font-size: 16px;
 	font-weight: 400;
+}
+
+.topBar {
+    width: 100%;
+    height: 40px;
+    font-weight: 400;
+    background-color: #5b5b5b;
+    color: ##d8d8d8;
 }
