--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ post .content {
     color: #d8d8d8;
     text-align: right;
     position:fixed;
-    top: -10px;
+    top: 0px;
+    left: 0px;
     padding-top: 40px;
     padding-right: 300px;
 }
