Okay, let's try this

--- a/style.css
+++ b/style.css
@@ -18,19 +18,19 @@ body {
 }
 
 .sidebarA {
-	height: 400px;
-	width: 250px;
-	border: 1px dashed;
+    height: 400px;
+    width: 250px;
+    background-color: rgba(242, 242, 242, .5);
     position: fixed;
     top: 60px;
 }
 
 .post {
-	position: relative;
-	top: 50px;
-	left: 260px;
-	width: 1000px;
-	border: 1px dashed;
+    position: relative;
+    top: 50px;
+    left: 260px;
+    width: 800px;
+    background-color: rgba(242, 242, 242, .5);
 }
 post .T {
 	font-size:20px;
@@ -53,14 +53,16 @@ post .content {
     position:fixed;
     top: 0px;
     left: 0px;
-    padding-top: 40px;
-    padding-right: 300px;
+    padding-top: 10px;
+    padding-right: 500px;
+    display: block;
 }
 
-a:link {
+#topBar a {
     text-decoration: none;
+    color: #d8d8d8;
 }
 
-#topBar .a:hover {
+#topBar a:hover {
     color: white;
 }
