--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     width: 250px;
     background-color: rgba(217, 217, 217, .5);
     position: fixed;
+    top: 60px;
 }
 
     .sidebarA a {
@@ -63,6 +64,7 @@ body {
     top: 0px;
     left: 0px;
     display: block;
+    padding-bottom: 15px;
 }
 
 #topBar a {
