--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@ body {
 	font-weight: 700;
 	width: 100%;
 	height: 35px;
-    margin-top: 50px;
+    margin-top: 100px;
+}
+
+.heada {
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .sidebarA {
@@ -23,7 +28,7 @@ body {
     width: 250px;
     background-color: rgba(217, 217, 217, .5);
     position: fixed;
-    top: 60px;
+    top: 65px;
 }
 
     .sidebarA a {
@@ -41,6 +46,7 @@ body {
     left: 260px;
     width: 800px;
     background-color: rgba(217, 217, 217, .5);
+    padding:20px, 10px;
 }
 .post .T {
 	font-size:20px;
